order dark mode fixed

--- a/react-app/src/components/Order/Order.css
+++ b/react-app/src/components/Order/Order.css
@@ -50,4 +50,17 @@
   }
 
 
- 
+  [data-theme='dark'] {
+    --background: #282c34;
+    --primary: white;
+  }
+
+  body {
+    background-color: var(--background);
+    color: var(--primary);
+  }
+
+  [data-theme='dark'] .order-container {
+    background-color: #282c34;
+    color: #fff;
+  }
